Fixed background image not fully covering site

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
 @media screen and (min-width: 992px) {
 	body {
 		background-image: url("../img/background.jpg");
-		background-size: 100% 100%;
+		background-size: cover;
 		background-repeat: no-repeat;
 		font-size: 18px;
 	}
